--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/Ntc.BookStore/.vs/Ntc.BookStore
+/Ntc.BookStore/bin/Debug/netcoreapp3.1
+/Ntc.BookStore/obj
